--- a/assets/header.html
+++ b/assets/header.html
@@ -4,10 +4,10 @@
       <img src="./image/jahz.png" alt="">
     </article>
     <nav class="menu">
-      <a href="./assets/home.html">Home</a>
-      <a href="./assets/acerca.html">Acerca</a>
-      <a href="./assets/servicios.html">Servicios</a>
-      <a href="./assets/contacto.html">Contacto</a>
+      <a href="./paginas/home.html">Home</a>
+      <a href="./paginas/acerca.html">Acerca</a>
+      <a href="./paginas/servicios.html">Servicios</a>
+      <a href="./paginas/contacto.html">Contacto</a>
     </nav>
   </section>
 </header>
